fix padding for better visibility

--- a/terminal.css
+++ b/terminal.css
@@ -17,8 +17,9 @@ html {
 
 #write {
     margin-inline: auto;
-    max-inline-size: min(calc(100% - 3em), 100ch);
-    padding: 3em 1em;
+    inline-size: min(calc(100% - 3em), 100ch);
+    padding-block: 3em 10em;
+    padding-inline: 1.5em;
     line-height: 1.75;
     font-size: 1.125em;
 }
@@ -34,7 +35,7 @@ h6 {
 
 :is(h1, h2, h3, h4)::before {
     content: "# ";
-    opacity: 0.5;
+    opacity: 0.3;
     margin-inline-start: -2ch;
 }
 
